Update title and job name placeholder in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WASM PDF MERGE // ENGINEER MODE</title>
+    <title>PDF Tools</title>
     <link rel="icon" href="data:,">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -17,7 +17,7 @@
             </div>
             
             <div id="splitControls" style="display:none; margin-top: 10px;">
-                <input type="text" id="jobNameInput" placeholder="Enter Job Name (e.g. Project_Alpha)" autocomplete="off">
+                <input type="text" id="jobNameInput" placeholder="Enter file name to extract to" autocomplete="off">
             </div>
         </div>
 
@@ -43,4 +43,5 @@
     <script type="module" src="./main.js"></script>
 </body>
 </html>
+
 
